<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".setting.VideoFragment">

    <TextView
            android:id="@+id/tv_video_input_select"
            android:layout_width="@dimen/dp_183"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_28"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/tv_bg_setting_select"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/default_camera"
            android:textColor="@color/grey_666666"
            android:textSize="@dimen/dp_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_9"
            android:layout_marginEnd="@dimen/dp_8"
            android:src="@drawable/icon_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_video_input_select"
            app:layout_constraintEnd_toEndOf="@id/tv_video_input_select"
            app:layout_constraintTop_toTopOf="@id/tv_video_input_select" />

    <TextView
            android:id="@+id/tv_video_input"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_9"
            android:gravity="center"
            android:text="@string/video_input"
            android:textColor="@color/grey_333333"
            android:textSize="@dimen/dp_7"
            app:layout_constraintBottom_toBottomOf="@id/tv_video_input_select"
            app:layout_constraintEnd_toStartOf="@id/tv_video_input_select"
            app:layout_constraintTop_toTopOf="@id/tv_video_input_select" />


    <TextView
            android:id="@+id/tv_video_fps_select"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_18"
            android:background="@drawable/tv_bg_setting_select"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/FPS_15"
            android:textColor="@color/grey_666666"
            android:textSize="@dimen/dp_6"
            app:layout_constraintStart_toStartOf="@id/tv_video_input_select"
            app:layout_constraintTop_toBottomOf="@id/tv_video_input_select" />

    <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_9"
            android:layout_marginEnd="@dimen/dp_8"
            android:src="@drawable/icon_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_video_fps_select"
            app:layout_constraintEnd_toEndOf="@id/tv_video_fps_select"
            app:layout_constraintTop_toTopOf="@id/tv_video_fps_select" />

    <TextView
            android:id="@+id/tv_video_fps"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_9"
            android:gravity="center"
            android:text="@string/video_fps"
            android:textColor="@color/grey_333333"
            android:textSize="@dimen/dp_7"
            app:layout_constraintBottom_toBottomOf="@id/tv_video_fps_select"
            app:layout_constraintEnd_toStartOf="@id/tv_video_fps_select"
            app:layout_constraintTop_toTopOf="@id/tv_video_fps_select" />


    <TextView
            android:id="@+id/tv_video_bitrate_select"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/tv_bg_setting_select"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/bitrate_standard"
            android:textColor="@color/grey_666666"
            android:textSize="@dimen/dp_6"
            app:layout_constraintStart_toStartOf="@id/tv_video_fps_select"
            app:layout_constraintTop_toBottomOf="@id/tv_video_fps_select" />

    <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_9"
            android:layout_marginEnd="@dimen/dp_8"
            android:src="@drawable/icon_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_video_bitrate_select"
            app:layout_constraintEnd_toEndOf="@id/tv_video_bitrate_select"
            app:layout_constraintTop_toTopOf="@id/tv_video_bitrate_select" />

    <TextView
            android:id="@+id/tv_video_bitrate"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_9"
            android:gravity="center"
            android:text="@string/video_bitrate"
            android:textColor="@color/grey_333333"
            android:textSize="@dimen/dp_7"
            app:layout_constraintBottom_toBottomOf="@id/tv_video_bitrate_select"
            app:layout_constraintEnd_toStartOf="@id/tv_video_bitrate_select"
            app:layout_constraintTop_toTopOf="@id/tv_video_bitrate_select" />

    <TextView
            android:id="@+id/tv_video_codec_select"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/tv_bg_setting_select"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/codec_hardware"
            android:textColor="@color/grey_666666"
            android:textSize="@dimen/dp_6"
            app:layout_constraintStart_toStartOf="@id/tv_video_bitrate_select"
            app:layout_constraintTop_toBottomOf="@id/tv_video_bitrate_select" />

    <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_9"
            android:layout_marginEnd="@dimen/dp_8"
            android:src="@drawable/icon_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_video_codec_select"
            app:layout_constraintEnd_toEndOf="@id/tv_video_codec_select"
            app:layout_constraintTop_toTopOf="@id/tv_video_codec_select" />

    <TextView
            android:id="@+id/tv_video_codec"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_9"
            android:gravity="center"
            android:text="@string/video_codec"
            android:textColor="@color/grey_333333"
            android:textSize="@dimen/dp_7"
            app:layout_constraintBottom_toBottomOf="@id/tv_video_codec_select"
            app:layout_constraintEnd_toStartOf="@id/tv_video_codec_select"
            app:layout_constraintTop_toTopOf="@id/tv_video_codec_select" />


    <TextView
            android:id="@+id/tv_video_resolution_select"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/tv_bg_setting_select"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/dimensions_480P"
            android:textColor="@color/grey_666666"
            android:textSize="@dimen/dp_6"
            app:layout_constraintStart_toStartOf="@id/tv_video_codec_select"
            app:layout_constraintTop_toBottomOf="@id/tv_video_codec_select" />

    <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_9"
            android:layout_marginEnd="@dimen/dp_8"
            android:src="@drawable/icon_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_video_resolution_select"
            app:layout_constraintEnd_toEndOf="@id/tv_video_resolution_select"
            app:layout_constraintTop_toTopOf="@id/tv_video_resolution_select" />

    <TextView
            android:id="@+id/tv_video_resolution"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_9"
            android:gravity="center"
            android:text="@string/video_resolution"
            android:textColor="@color/grey_333333"
            android:textSize="@dimen/dp_7"
            app:layout_constraintBottom_toBottomOf="@id/tv_video_resolution_select"
            app:layout_constraintEnd_toStartOf="@id/tv_video_resolution_select"
            app:layout_constraintTop_toTopOf="@id/tv_video_resolution_select" />

    <FrameLayout
            android:id="@+id/fl_video_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_9"
            app:layout_constraintBottom_toBottomOf="@id/tv_video_resolution_select"
            app:layout_constraintEnd_toEndOf="@id/tv_video_input_select"
            app:layout_constraintStart_toEndOf="@id/tv_video_fps_select"
            app:layout_constraintTop_toTopOf="@id/tv_video_fps_select" />

</android.support.constraint.ConstraintLayout>