<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".setting.LayoutFragment">

    <TextView
            android:id="@+id/tv_one_v_n_select"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_66"
            android:layout_marginEnd="@dimen/dp_81"
            android:background="@drawable/tv_bg_setting_select"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/one_v_16"
            android:textColor="@color/grey_666666"
            android:textSize="@dimen/dp_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_9"
            android:layout_marginEnd="@dimen/dp_8"
            android:src="@drawable/icon_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_one_v_n_select"
            app:layout_constraintEnd_toEndOf="@id/tv_one_v_n_select"
            app:layout_constraintTop_toTopOf="@id/tv_one_v_n_select" />

    <TextView
            android:id="@+id/tv_one_v_n"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_9"
            android:gravity="center"
            android:text="@string/one_v_N"
            android:textColor="@color/grey_333333"
            android:textSize="@dimen/dp_7"
            app:layout_constraintBottom_toBottomOf="@id/tv_one_v_n_select"
            app:layout_constraintEnd_toStartOf="@id/tv_one_v_n_select"
            app:layout_constraintTop_toTopOf="@id/tv_one_v_n_select" />

    <TextView
            android:id="@+id/tv_layout_select"
            android:layout_width="@dimen/dp_75"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/tv_bg_setting_select"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/layout_PIP"
            android:textColor="@color/grey_666666"
            android:textSize="@dimen/dp_6"
            app:layout_constraintEnd_toEndOf="@id/tv_one_v_n_select"
            app:layout_constraintTop_toBottomOf="@id/tv_one_v_n_select" />

    <ImageView
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_9"
            android:layout_marginEnd="@dimen/dp_8"
            android:src="@drawable/icon_arrow_down"
            app:layout_constraintBottom_toBottomOf="@id/tv_layout_select"
            app:layout_constraintEnd_toEndOf="@id/tv_layout_select"
            app:layout_constraintTop_toTopOf="@id/tv_layout_select" />

    <TextView
            android:id="@+id/tv_layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_9"
            android:gravity="center"
            android:text="@string/layout"
            android:textColor="@color/grey_333333"
            android:textSize="@dimen/dp_7"
            app:layout_constraintBottom_toBottomOf="@id/tv_layout_select"
            app:layout_constraintEnd_toStartOf="@id/tv_layout_select"
            app:layout_constraintTop_toTopOf="@id/tv_layout_select" />

</android.support.constraint.ConstraintLayout>