<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="@dimen/dp_329"
        android:layout_height="@dimen/dp_235">

    <LinearLayout
            android:id="@+id/ll_tabs"
            android:layout_width="@dimen/dp_66"
            android:layout_height="match_parent"
            android:background="@drawable/layout_setting_left"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/Setting"
                android:textColor="@color/grey_333333"
                android:textSize="@dimen/dp_10" />

        <io.agora.rtc.shuangshi.view.CheckableLinearLayout
                android:id="@+id/setting_tab_audio"
                android:layout_width="@dimen/dp_46"
                android:layout_height="@dimen/dp_46"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@drawable/layout_setting_tab"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="@dimen/dp_5">

            <ImageView
                    android:layout_width="@dimen/dp_28"
                    android:layout_height="@dimen/dp_28"
                    android:src="@drawable/ic_setting_audio" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Audio"
                    android:textColor="@drawable/color_294385_white"
                    android:textSize="@dimen/dp_8" />
        </io.agora.rtc.shuangshi.view.CheckableLinearLayout>

        <io.agora.rtc.shuangshi.view.CheckableLinearLayout
                android:id="@+id/setting_tab_video"
                android:layout_width="@dimen/dp_46"
                android:layout_height="@dimen/dp_46"
                android:layout_marginTop="@dimen/dp_19"
                android:background="@drawable/layout_setting_tab"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="@dimen/dp_5">

            <ImageView
                    android:layout_width="@dimen/dp_28"
                    android:layout_height="@dimen/dp_28"
                    android:src="@drawable/ic_setting_video" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Video"
                    android:textColor="@drawable/color_294385_white"
                    android:textSize="@dimen/dp_8" />
        </io.agora.rtc.shuangshi.view.CheckableLinearLayout>

        <io.agora.rtc.shuangshi.view.CheckableLinearLayout
                android:id="@+id/setting_tab_layout"
                android:layout_width="@dimen/dp_46"
                android:layout_height="@dimen/dp_46"
                android:layout_marginTop="@dimen/dp_19"
                android:background="@drawable/layout_setting_tab"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="@dimen/dp_5">

            <ImageView
                    android:layout_width="@dimen/dp_28"
                    android:layout_height="@dimen/dp_28"
                    android:src="@drawable/ic_setting_layout" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Layout"
                    android:textColor="@drawable/color_294385_white"
                    android:textSize="@dimen/dp_8" />
        </io.agora.rtc.shuangshi.view.CheckableLinearLayout>
    </LinearLayout>

    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/layout_setting_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ll_tabs"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/iv_icon_close"
            android:layout_width="@dimen/dp_9"
            android:layout_height="@dimen/dp_9"
            android:layout_marginTop="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_12"
            android:src="@drawable/icon_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_btn_cancel"
            android:layout_width="@dimen/dp_42"
            android:layout_height="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_13"
            android:background="@drawable/btn_circle_stroke_1_cccccc"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textColor="@color/blue_44A2FC"
            android:textSize="@dimen/dp_7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/tv_btn_apply"
            android:layout_width="@dimen/dp_42"
            android:layout_height="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_7"
            android:background="@drawable/btn_circle_44a2fc"
            android:gravity="center"
            android:text="@string/Apply"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_7"
            app:layout_constraintBottom_toBottomOf="@id/tv_btn_cancel"
            app:layout_constraintEnd_toStartOf="@id/tv_btn_cancel" />

    <FrameLayout
            android:id="@+id/fl_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/tv_btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ll_tabs"
            app:layout_constraintTop_toBottomOf="@id/iv_icon_close" />
</android.support.constraint.ConstraintLayout>