<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".setting.AudioFragment">

    <TextView
            android:id="@+id/tv_microphone_select"
            android:layout_width="@dimen/dp_183"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_28"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/tv_bg_setting_select"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/default_microphone"
            android:textColor="@color/grey_666666"
            android:textSize="@dimen/dp_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_microphone"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_9"
            android:gravity="center"
            android:text="@string/Microphone"
            android:textColor="@color/grey_333333"
            android:textSize="@dimen/dp_7"
            app:layout_constraintBottom_toBottomOf="@id/tv_microphone_select"
            app:layout_constraintEnd_toStartOf="@id/tv_microphone_select"
            app:layout_constraintTop_toTopOf="@id/tv_microphone_select" />

    <TextView
            android:id="@+id/tv_speakerphone_select"
            android:layout_width="@dimen/dp_183"
            android:layout_height="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_54"
            android:background="@drawable/tv_bg_setting_select"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/dp_10"
            android:text="@string/default_microphone"
            android:textColor="@color/grey_666666"
            android:textSize="@dimen/dp_7"
            app:layout_constraintEnd_toEndOf="@id/tv_microphone_select"
            app:layout_constraintTop_toBottomOf="@id/tv_microphone_select" />

    <TextView
            android:id="@+id/tv_speakerphone"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/dp_9"
            android:gravity="center"
            android:text="@string/Speaker"
            android:textColor="@color/grey_333333"
            android:textSize="@dimen/dp_7"
            app:layout_constraintBottom_toBottomOf="@id/tv_speakerphone_select"
            app:layout_constraintEnd_toStartOf="@id/tv_speakerphone_select"
            app:layout_constraintTop_toTopOf="@id/tv_speakerphone_select" />

    <SeekBar
            android:id="@+id/seekbar_speakerphone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_11"
            android:max="200"
            android:progress="100"
            app:layout_constraintEnd_toEndOf="@id/tv_speakerphone_select"
            app:layout_constraintStart_toStartOf="@id/tv_speakerphone_select"
            app:layout_constraintTop_toBottomOf="@id/tv_speakerphone_select" />

    <io.agora.rtc.shuangshi.view.CheckableLinearLayout
            android:id="@+id/check_layout_high_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_11"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="@id/seekbar_speakerphone"
            app:layout_constraintTop_toBottomOf="@id/seekbar_speakerphone">

        <ImageView
                android:layout_width="@dimen/dp_7"
                android:layout_height="@dimen/dp_7"
                android:src="@drawable/bg_ic_check_box" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_2"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/high_quality_audio"
                android:textColor="@drawable/tv_color_radio_button"
                android:textSize="@dimen/dp_7" />

    </io.agora.rtc.shuangshi.view.CheckableLinearLayout>

    <io.agora.rtc.shuangshi.view.CheckableLinearLayout
            android:id="@+id/check_layout_stereo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_51"
            android:gravity="center_vertical"
            app:layout_constraintStart_toEndOf="@id/check_layout_high_quality"
            app:layout_constraintTop_toBottomOf="@id/seekbar_speakerphone"
            app:layout_constraintTop_toTopOf="@id/check_layout_high_quality">

        <ImageView
                android:layout_width="@dimen/dp_7"
                android:layout_height="@dimen/dp_7"
                android:src="@drawable/bg_ic_check_box" />

        <TextView
                android:id="@+id/tv_radio_btn_teacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_2"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/stereo"
                android:textColor="@drawable/tv_color_radio_button"
                android:textSize="@dimen/dp_7" />

    </io.agora.rtc.shuangshi.view.CheckableLinearLayout>
</android.support.constraint.ConstraintLayout>